Allow setting "expando" properties on XPCNativeWrapper.  Bug 300325, r=jst, sr+a=brendan